_sass/_base.scss
/*******************************************************************************
 * Styles for the base elements of the theme.
 ******************************************************************************/

// Typography

@import url('https://fonts.googleapis.com/css2?family=DM Sans:wght@100;300;500;700&display=swap');

p,
h1,
h2,
h3,
h4,
h5,
h6,
em,
div,
li,
span,
strong {
  color: var(--global-text-color);
  font-family: 'DM Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}

hr {
  border-top: 1px solid var(--global-divider-color);
}

table {
  td,
  th {
    font-size: 1rem;
    padding: 1px 1rem 1px 0;
    color: var(--global-text-color);
  }

  th {
    font-weight: 600;
  }
}

a,
table.table a {
  color: var(--global-theme-color);

  &:hover {
    color: var(--global-theme-color);
    text-decoration: underline;
  }

  &:hover:after :not(.nav-item.dropdown) {
    width: 100%;
  }
}

.table-dark {
  background-color: transparent;
  &.table-bordered {
    border: 1px solid var(--global-divider-color) !important;
  }
}

blockquote {
  background: var(--global-bg-color);
  border-left: 5px solid var(--global-theme-color);
  margin: 1.5em 0;
  padding: 1em;
  font-size: 1.2rem;

  p {
    margin-bottom: 0;
  }

  /* Tips, warnings, and dangers blockquotes */
  &.block-tip {
    border-color: var(--global-tip-block);
    background-color: var(--global-tip-block-bg);

    em,
    li,
    p,
    strong {
      color: var(--global-tip-block-text);
    }

    h1,
    h2,
    h3,
    h4,
    h5,
    h6 {
      color: var(--global-tip-block-title);
    }
  }

  &.block-warning {
    border-color: var(--global-warning-block);
    background-color: var(--global-warning-block-bg);

    em,
    li,
    p,
    strong {
      color: var(--global-warning-block-text);
    }

    h1,
    h2,
    h3,
    h4,
    h5,
    h6 {
      color: var(--global-warning-block-title);
    }
  }

  &.block-danger {
    border-color: var(--global-danger-block);
    background-color: var(--global-danger-block-bg);

    em,
    li,
    p,
    strong {
      color: var(--global-danger-block-text);
    }

    h1,
    h2,
    h3,
    h4,
    h5,
    h6 {
      color: var(--global-danger-block-title);
    }
  }
}

// Checklist

ul.task-list {
  list-style-type: none; /* Remove bullets from all levels */
}

ul.task-list > li ul {
  /* Nested lists within .task-list */
  padding-inline-start: 1.5rem;
}

ul.task-list input[type="checkbox"] {
  margin: 0.275rem 0.5rem 0.5rem -1rem;
  vertical-align: middle;
}

// Math

.equation {
  margin-bottom: 1rem;
  text-align: center;
}

// Caption

.caption {
  font-size: 0.875rem;
  margin-top: 0.75rem;
  margin-bottom: 1.5rem;
  text-align: center;
}

// Card

.card {
  background-color: var(--global-card-bg-color);

  img {
    width: 100%;
  }

  .card-title {
    color: var(--global-text-color);
  }

  .card-item {
    width: auto;
    margin-bottom: 10px;

    .row {
      display: flex;
      align-items: center;
    }
  }
}

// List-group

.list-group {
  background-color: var(--global-card-bg-color);

  .list-group-item {
    width: auto;
    margin-bottom: 10px;
    background-color: var(--global-card-bg-color);

    .badge {
      background-color: var(--global-theme-color);
    }
  }

}

// Citation

.citation,
.citation-number {
  color: var(--global-theme-color);
}

// Profile

.profile {
  width: 100%;

  .more-info {
    margin-bottom: 5px;
    margin-top: 5px;
    font-style: italic;

    p {
      display: inline-block;
      margin: 0;
    }
  }
}

.profile.float-right {
  margin-left: 1rem;
}

.profile.float-left {
  margin-right: 1rem;
}

@media (min-width: 576px) {
  .profile {
    width: 30%;

    .address {
      p {
        display: block;
      }
    }
  }
}

.post-description {
  margin-bottom: 2rem;
  font-size: 0.875rem;

  a {
    color: inherit;

    &:hover {
      color: var(--global-theme-color);
      text-decoration: none;
    }
  }
}

// Navbar customization

.navbar {
  box-shadow: none;
  border-bottom: 1px solid var(--global-divider-color);
  background-color: var(--global-bg-color);
  opacity: 0.95;

  .nav-pills .nav-link.active, .nav-pills .show>.nav-link {
    background-color: var(--global-pill-bg-color);
  }
}

.navbar .dropdown-menu {
  background-color: var(--global-bg-color);
  border: 1px solid var(--global-divider-color);

  a:not(.active) {
    color: var(--global-text-color);
  }

  a:hover {
    color: var(--global-hover-color);
  }

  .dropdown-divider {
    border-top: 1px solid var(--global-divider-color) !important;
  }
}

.dropdown-item {
  color: var(--global-text-color);

  &:hover {
    color: var(--global-hover-color);
    background-color: var(--global-bg-color);
  }
}

.navbar.navbar-light {
  a {
    &:hover {
      text-decoration: none;
    }
  }

  .navbar-brand {
    color: var(--global-text-color);
  }

  .navbar-nav .nav-item .nav-link {
    color: var(--global-text-color);

    &:hover {
      color: var(--global-hover-color);
    }
  }

  .navbar-nav .nav-item.active > .nav-link {
    background-color: inherit;
    font-weight: bolder;
    color: var(--global-theme-color);

    &:hover {
      color: var(--global-hover-color);
    }
  }

  .navbar-brand.social {
    padding-bottom: 0;
    padding-top: 0;
    font-size: 1.7rem;

    a {
            img {
        width: 1.7rem;
        height: 1.7rem;
        margin-bottom: 0.5rem;
        // margin: 0.5rem;
      }

      svg {
        width: 1.7rem;
        height: 1.7rem;
        margin-bottom: 0.5rem;

        image {
          width: 1.7rem;
          height: 1.7rem;
        }
      }

      i::before {
        color: var(--global-text-color);
        transition-property: all 0.2s ease-in-out;
      }

      &:hover {
        i::before {
          color: var(--global-theme-color);
        }
      }
    }
  }
}
/* ... */

